[gd_scene load_steps=12 format=3 uid="uid://cni81h2wunn0y"]

[ext_resource type="Script" path="res://system/menu/tag_select/tag_select.gd" id="1_k8biu"]
[ext_resource type="Script" path="res://addons/icons-fonts/nodes/FontIconButton.gd" id="2_y1j42"]
[ext_resource type="Script" path="res://addons/icons-fonts/resources/FontIconSetting.gd" id="3_sxd3e"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s6km5"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.1, 0.1, 0.1, 0.6)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="Resource" id="Resource_yim4j"]
script = ExtResource("3_sxd3e")
icon_font = "MaterialIcons"
icon_name = "tag-plus"
icon_size = 16
icon_color = Color(1, 1, 1, 1)
outline_color = Color(1, 1, 1, 1)
outline_size = 0
shadow_color = Color(1, 1, 1, 1)
shadow_size = 0
shadow_offset = Vector2(0, 0)

[sub_resource type="Resource" id="Resource_gmslm"]
script = ExtResource("3_sxd3e")
icon_font = "MaterialIcons"
icon_name = "tag-remove"
icon_size = 16
icon_color = Color(1, 1, 1, 1)
outline_color = Color(1, 1, 1, 1)
outline_size = 0
shadow_color = Color(1, 1, 1, 1)
shadow_size = 0
shadow_offset = Vector2(0, 0)

[sub_resource type="LabelSettings" id="LabelSettings_3a1id"]

[sub_resource type="Resource" id="Resource_61xp5"]
script = ExtResource("3_sxd3e")
icon_font = "MaterialIcons"
icon_name = "tag-arrow-down"
icon_size = 16
icon_color = Color(1, 1, 1, 1)
outline_color = Color(1, 1, 1, 1)
outline_size = 0
shadow_color = Color(1, 1, 1, 1)
shadow_size = 0
shadow_offset = Vector2(0, 0)

[sub_resource type="LabelSettings" id="LabelSettings_upgav"]

[sub_resource type="Resource" id="Resource_6ek0u"]
script = ExtResource("3_sxd3e")
icon_font = "MaterialIcons"
icon_name = "tag-arrow-up"
icon_size = 16
icon_color = Color(1, 1, 1, 1)
outline_color = Color(1, 1, 1, 1)
outline_size = 0
shadow_color = Color(1, 1, 1, 1)
shadow_size = 0
shadow_offset = Vector2(0, 0)

[sub_resource type="LabelSettings" id="LabelSettings_g7tfi"]

[node name="TagSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_k8biu")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
custom_minimum_size = Vector2(0, 24)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.109804, 0.109804, 0.109804, 1)

[node name="VSplitContainer" type="VSplitContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
split_offset = 300

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AvailableTags" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/AvailableTags"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer/AvailableTags/VBoxContainer"]
layout_mode = 2
text = "Available tags:"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/AvailableTags/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="AvailableTagsDisplay" type="ItemList" parent="VBoxContainer/AvailableTags/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
select_mode = 1
allow_search = false

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/AvailableTags/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="AddAvailableTag" type="PanelContainer" parent="VBoxContainer/AvailableTags/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Create new tag."
theme_override_styles/panel = SubResource("StyleBoxFlat_s6km5")
script = ExtResource("2_y1j42")
layout_order = "Icon"
icon_settings = SubResource("Resource_yim4j")

[node name="RemoveAvailableTag" type="PanelContainer" parent="VBoxContainer/AvailableTags/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Remove a tag from the available tags."
theme_override_styles/panel = SubResource("StyleBoxFlat_s6km5")
script = ExtResource("2_y1j42")
layout_order = "Icon"
icon_settings = SubResource("Resource_gmslm")
label_settings = SubResource("LabelSettings_3a1id")

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/AvailableTags/VBoxContainer"]
layout_mode = 2

[node name="ApplyTags" type="PanelContainer" parent="VBoxContainer/AvailableTags/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_s6km5")
script = ExtResource("2_y1j42")
icon_settings = SubResource("Resource_61xp5")
label_text = "Apply Selected"
label_settings = SubResource("LabelSettings_upgav")

[node name="RemoveTags" type="PanelContainer" parent="VBoxContainer/AvailableTags/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_s6km5")
script = ExtResource("2_y1j42")
icon_settings = SubResource("Resource_6ek0u")
label_text = "Remove Selected"
label_settings = SubResource("LabelSettings_g7tfi")

[node name="SelectedTags" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/SelectedTags"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer/SelectedTags/VBoxContainer"]
layout_mode = 2
text = "Selected tags:"

[node name="SelectedTagsDisplay" type="ItemList" parent="VBoxContainer/SelectedTags/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
select_mode = 1
allow_search = false
